results/SVCOMP/4-shot/log-ExSymExe20-2024_03_18_19_14_34.txt
class Main {
  static int field;
  static int field2;

  //@ ensures \result ==> field2 == 3 - 3 && field == 3 + 9;
  //@ ensures !\result ==> field2 != 3 - 3 || field != 3 + 9;
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires z == 9 && r == 0;
  //@ ensures \result ==> z >= x && x < r;
  //@ ensures !\result ==> z < x || x >= r;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field2 == 3 - 3 && field == 3 + 9;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field2 == 3 - 3 && field == 3 + 9;
                                             ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field2 != 3 - 3 || field != 3 + 9;
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field2 != 3 - 3 || field != 3 + 9;
                                              ^
4 errors

